--- a/index.html
+++ b/index.html
@@ -20,35 +20,39 @@
 <body>
   <header class="header">
     <div>
-    <nav class="container flex flex-jc-sb flex-ai-c"> <!--container--pall-->
-      <a href="/" class="header__logo">
-        <img src="/images/logo.svg" alt="Sunnyside Logo"/>
-      </a>
+      <nav class="container container--pall flex flex-jc-sb flex-ai-c">
+        <a href="/" class="header__logo">
+          <img src="/images/logo.svg" alt="Sunnyside Logo"/>
+        </a>
+        <a href="#" id="btn-hamburger" class="header__toggle hide-for-desktop">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+        <div class="flex flex-ai-c">
+        <div class="header__links hide-for-mobile">
+          <a href="#" class="button">About</a>
+          <a href="#" class="button">Services</a>
+          <a href="#" class="button">Projects</a>
+        </div>
 
-      <a href="#" id="btn-hamburger" class="header__toggle hide-for-desktop">
-        <span></span>
-        <span></span>
-        <span></span>
-      </a>
-      <div class="flex flex-ai-c">
-      <div class="header__links hide-for-mobile">
-        <a href="#" class="button">About</a>
-        <a href="#" class="button">Services</a>
-        <a href="#" class="button">Projects</a>
+        <button type="button" class="button header__btn hide-for-mobile">CONTACT</button>
       </div>
 
-      <button type="button" class="button header__btn">CONTACT</button><!--hide-for-mobile-->
+      <a href="#" id="btnHamburger" class="header__hamburger hide-for-desktop">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+      </nav>
     </div>
-    </nav>
-  </div>
 
-      <!--
     <div class="header__menu has-fade">
       <a href="">About</a>
       <a href="">Services</a>
       <a href="">Projects</a>
+      <button type="button" class="button header__btn">CONTACT</button>
     </div>
-    -->
 
     <div class="hero">
       <div class="hero__title container container--py">WE ARE CREATIVES</div>
@@ -62,7 +66,7 @@
 
   <div id="features" class="features">
     <div class="grid">
-      <div class="grid-box grid__1 card container flex flex-jc-c flex-fd-col">
+      <div class="grid-box grid__1 card container flex flex-fd-col flex-jc-c">
         <div class="card__heading">Transform your brand</div>
         <div class="card__text">
           <p>
@@ -70,7 +74,7 @@
             Engage your clients through compelling visuals that do most of the marketing for you.
           </p>
         </div>
-        <div class="card__link">LEARN MORE</div>
+        <div class="card__link link1">LEARN MORE</div>
       </div>
       <div class="grid-box grid__2"></div>
       <div class="grid-box grid__3"></div>
@@ -81,9 +85,10 @@
             Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
           </p>
         </div>
-        <div class="card__link">LEARN MORE</div>
+        <div class="card__link link2">LEARN MORE</div>
       </div>
-      <div class="grid-box grid__5 card container flex flex-jc-c flex-fd-col">
+      <div class="grid-box grid__5 card">
+        <div class="wrap">
         <div class="card__heading">Graphic design</div>
         <div class="card__text">
           <p>
@@ -91,7 +96,9 @@
           </p>
         </div>
       </div>
-      <div class="grid-box grid__6 card container flex flex-jc-c flex-fd-col">
+      </div>
+      <div class="grid-box grid__6 card">
+        <div class="wrap">
         <div class="card__heading">Photography</div>
         <div class="card__text">
           <p>
@@ -99,24 +106,76 @@
           </p>
         </div>
       </div>
+      </div>
     </div>
   </div>
 
+  <section class="testimonials">
+    <div class="wrapper container container--pall flex flex-fd-col flex-ai-c">
+      <div class="wrapper__title">CLIENT TESTIMONIALS</div>
+      <div class="cards flex flex-fd-row">
+        <div class="card">
+          <img src="/images/image-emily.jpg" class="card__photo" alt="Emily R."/>
+          <div class="card__text">
+            <p>
+              We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+            </p>
+          </div>
+          <div class="card__client">
+            <div class="card__client__name">Emily R.</div>
+            <div class="card__client__role">Marketing Director</div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/images/image-thomas.jpg" class="card__photo" alt="Thomas S."/>
+          <div class="card__text">
+            <p>
+              Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+            </p>
+          </div>
+          <div class="card__client">
+            <div class="card__client__name">Thomas S.</div>
+            <div class="card__client__role">Chief Operating Officer</div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/images/image-jennie.jpg" class="card__photo" alt="Jennie F."/>
+          <div class="card__text">
+            <p>
+              Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+            </p>
+          </div>
+          <div class="card__client">
+            <div class="card__client__name">Jennie F.</div>
+            <div class="card__client__role">Business Owner</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="photos">
+    <div class="grid">
+      <div class="grid__photo-1">
+        <img src="" alt=""/>
+      </div>
+      <div class="grid__photo-2">
+        <img src="" alt=""/>
+      </div>
+      <div class="grid__photo-3">
+        <img src="" alt=""/>
+      </div>
+      <div class="grid__photo-4">
+        <img src="" alt=""/>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+
+  </footer>
+
   <!--
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
   About
   Services
   Projects
